dsl/src/svg_generator/examples/error_use_after_move/source.rs
fn main() {
    let x = String::from("hello");
    let y = x;
    println!("{}", x) // error: x does not own a resource
}
